fix overflow setting on manifest lines
When using Chrome, each line of the manifest was gaining scroll
bars, as Bootstrap has "overflow: auto". Changing this to
"overflow: inherit" removes these scroll bars.

--- a/static/css/validator.less
+++ b/static/css/validator.less
@@ -45,6 +45,9 @@
           &:nth-child(2n) {
               background-color: #ddd;
           }
+          .text {
+              overflow: inherit;
+          }
       }
 
       .line-num {
